--- a/Cabana das Grifes/style.css
+++ b/Cabana das Grifes/style.css
@@ -61,6 +61,7 @@ body {
   display: none;
   animation: fadein 0.4s ease-in;
   text-decoration: none;
+
   
   
 }
@@ -91,8 +92,6 @@ body {
 }
 
 
-
-
 .vitrine {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
@@ -109,16 +108,21 @@ body {
   transition: transform 0.2s ease;
 }
 
+
 .produto:hover {
   transform: scale(1.03);
 }
 
 .produto img {
+  position: relative;
+  left: auto;
+  right: auto;
   width: 100%;
   border-radius: 8px;
   height: 100%;
   margin-bottom: 8px;
   object-fit: cover;
+  
 }
 
 .produto h3 {
