--- a/Cabana das Grifes/style.css
+++ b/Cabana das Grifes/style.css
@@ -6,9 +6,40 @@
   color: white;
 }
 
+ .aba1, .aba2, .aba3 {
+    display: none;
+  } 
 body {
-  background: #111;
+  background-color: #ffffff;
+  color: #000000;
+  transition: background-color 0.3s, color 0.3s;
 }
+
+/* 🌚 MODO ESCURO */
+body.dark-mode {
+  background-color: #121212;
+  color: #ffffff;
+}
+
+/* Botão de alternância */
+#toggleMode {
+  position: relative;
+  top: 10px;
+  right: 10px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  background-color: black;
+  color: #fff;
+  cursor: pointer;
+}
+
+body.dark-mode #toggleMode {
+  background-color: black;
+  color: white;
+}
+
+
 
 .navbar {
   position:absolute;
@@ -61,7 +92,6 @@ body {
   display: none;
   animation: fadein 0.4s ease-in;
   text-decoration: none;
-
   
   
 }
@@ -81,6 +111,7 @@ body {
   color: black;
   border-radius: 60px 60px 60px 60px;
   border: none;
+  transition: 0.6s;
  
 }
 
@@ -90,6 +121,8 @@ body {
   right: 17px;
   border-radius: 40px 40px 40px 40px;
 }
+
+
 
 
 .vitrine {
@@ -108,21 +141,16 @@ body {
   transition: transform 0.2s ease;
 }
 
-
 .produto:hover {
   transform: scale(1.03);
 }
 
 .produto img {
-  position: relative;
-  left: auto;
-  right: auto;
   width: 100%;
   border-radius: 8px;
   height: 100%;
   margin-bottom: 8px;
   object-fit: cover;
-  
 }
 
 .produto h3 {
@@ -211,4 +239,22 @@ button[type='submit']:hover {
     width: 100%;
     height: 300px;
   }
+}
+/* Forçar herança da cor do body */
+* h1, h2, h3, p, a, span, label, .conteudo {
+  
+  color: inherit;
+  background: inherit;
+}
+
+
+
+/* Exceções ou ajustes */
+
+.aba,
+.produto,
+form input,
+form button {
+  background-color: transparent;
+  color: inherit;
 }
