--- a/Cabana das Grifes/style.css
+++ b/Cabana das Grifes/style.css
@@ -13,12 +13,13 @@ body {
   transition: background-color 0.3s, color 0.3s;
 }
 
-
+/* 🌚 MODO ESCURO */
 body.dark-mode {
   background-color: #121212;
   color: #ffffff;
 }
 
+/* Botão de alternância */
 #toggleMode {
   position: relative;
   top: 10px;
@@ -237,13 +238,17 @@ button[type='submit']:hover {
     height: 300px;
   }
 }
-
+/* Forçar herança da cor do body */
 * h1, h2, h3, p, a, span, label, .conteudo {
   
   color: inherit;
   background: inherit;
 }
+body:not(.dark-mode) label {
+  color: #000;
+}
 
+/* Exceções ou ajustes */
 
 .aba,
 .produto,
@@ -253,7 +258,10 @@ form button {
   color: inherit;
 }
 
+
 #toggleMode{
   position: relative;
   top: -1px;
 }
+
+
